# example_deep_learning_project

./: .gitignore  pyproject.toml  readme.md  requirements-dev.txt  requirements.txt  run.py
.github/workflows/: tests.yaml
src/example_package/dataloaders/: mock_dataloader.py
src/example_package/models/: mlp.py
src/example_package/tests/: test_mlp_trains.py
